<resources>
    <string name="app_name">Puzka</string>
    <string name="a1">Homepage</string>
    <string name="a2">Menu</string>
    <string name="a3">Settings</string>
    <string name="a4">Create Img to Pdf</string>
    <string name="a5">All PDF</string>
    <string name="a6">Portrait</string>
    <string name="a7">Landscape</string>
    <string name="a8">Auto</string>
    <string name="a9">480p</string>
    <string name="a10">600p</string>
    <string name="a11">720p</string>
    <string name="a12">1080p</string>
    <string name="a13">Edit</string>
    <string name="a14">Create Notes</string>
    <string name="a15">Create</string>
    <string name="a16">Search</string>
    <string name="a17">Menu</string>
    <string name="a18">Notepad</string>
    <string name="a19">All</string>
    <string name="a20">Home</string>
    <string name="a21">Enter Note.....</string>
    <string name="a22">Enter Title....</string>
    <string name="a23">September, 2021</string>
    <string name="a24">SUN</string>
    <string name="a25">MON</string>
    <string name="a26">TUE</string>
    <string name="a27">WED</string>
    <string name="a28">THU</string>
    <string name="a29">FRI</string>
    <string name="a30">SAT</string>
    <string name="a31">Background Color</string>
    <string name="a32">Set Text Color</string>
    <string name="a33">Set Text Style</string>
    <string name="a34">Set Text Size</string>
    <string name="a35">Insert list</string>
    <string name="a36">Insert Image</string>
    <string name="a37">Save</string>
    <string name="a38">Last Edited: 12.02 AM- 31th May, 2021</string>
    <string name="a39">Select Color: </string>
    <string name="a40">Custom</string>
    <string name="a41">Save</string>
    <string name="a42">Select Style: </string>
    <string name="a43">Bold</string>
    <string name="a44">Italic</string>
    <string name="a45">Normal</string>
    <string name="a46">Underline</string>
    <string name="a47">Select Text Size: </string>
    <string name="a49">Heading</string>
    <string name="a53">Sub-Heading</string>
    <string name="a51">Normal</string>
    <string name="a52">Small</string>
    <string name="a54">Insert List: </string>
    <string name="a55">Bullet List</string>
    <string name="a56">English Letter List</string>
    <string name="a57">Roman Letter List</string>
    <string name="a58">Number</string>
    <string name="a59">Remove Margin</string>
    <string name="b1">Create Note</string>
    <string name="b2">Add Label</string>
    <string name="b3">Enter Label Name:</string>
    <string name="b4">Name....</string>
    <string name="b5">Add</string>
    <string name="b6">Update</string>
    <string name="b7">Update Label</string>
    <string name="b8">Label Name: </string>
    <string name="b9">No Documents Found!</string>
    <string name="b10">Details</string>
    <string name="b11">Update Label Name: </string>
    <string name="b12">Delete</string>
    <string name="b13">Edit Manu</string>
    <string name="b14">Select Edit Option: </string>
    <string name="b15">Continue</string>
    <string name="b16">All unsaved progress will be reset, are you sure to leave this page?</string>
    <string name="b17">Yes</string>
    <string name="b18">No</string>
    <string name="b19">Confirm Save</string>
    <string name="b20">Sure to save this Note? </string>
    <string name="b21">Search Note</string>
    <string name="b22">Enter Keywords Here: </string>
    <string name="b23">Search</string>
    <string name="b24">Calendar View</string>
    <string name="b25">Diary View</string>
    <string name="b26">My Notebook</string>
    <string name="b27">Enter Notes Here....</string>
    <string name="b28">Color</string>
    <string name="b29">Brush</string>
    <string name="b30">Eraser</string>
    <string name="b31">Emboss</string>
    <string name="b32">Blur</string>
    <string name="b33">Undo</string>
    <string name="b34">Redo</string>
    <string name="b35">Save Drawing</string>
    <string name="b36">Enter Name Here: </string>
    <string name="b37">Save</string>
    <string name="b38">Save On Storage</string>
    <string name="b39">drawable</string>
    <string name="b40">My Drawing</string>
    <string name="b41">Routines</string>
    <string name="b42">Wallet</string>
    <string name="b43">Schedule</string>
    <string name="b44">Routine</string>
    <string name="b45">Adjust</string>
    <string name="b46">Transactions</string>
    <string name="b47">Summary</string>
    <string name="b48">Transactions</string>
    <string name="b49">Summary</string>
    <string name="b50">My Accounts</string>
    <string name="b51">Total Accounts: </string>
    <string name="b52">Total Cash Balance: </string>
    <string name="b53">Show Details</string>
    <string name="b54">Add Account</string>
    <string name="b55">Account Balance: </string>
    <string name="b56">Add Transaction</string>
    <string name="b57">Income</string>
    <string name="b58">Expense</string>
    <string name="b59">Transfer</string>
    <string name="b60">Date: </string>
    <string name="b61">Enter Amount: </string>
    <string name="b62">Account:</string>
    <string name="b63">Add Note:</string>
    <string name="b64">To Account</string>
    <string name="c1">Add</string>
    <string name="c2">Cancel</string>
    <string name="c3">Dismiss</string>
    <string name="c4">Go Back</string>
    <string name="c5">Account Name: </string>
    <string name="c6">Account Type: </string>
    <string name="c7">Account Balance: </string>
    <string name="c8">Add</string>
    <string name="c9">Account Information</string>
    <string name="c10">Extra Charges (Optional): </string>
    <string name="c11">No Drawing Found! </string>
    <string name="c12">No Transaction Found!</string>
    <string name="c13">Total Amount: </string>
    <string name="c14">Search</string>
    <string name="c15">Routine</string>
    <string name="c16">Create A Note</string>
    <string name="c17">Start</string>
    <string name="c18">Add A Drawing</string>
    <string name="c19">My Diary</string>
    <string name="c20">My Wallet</string>
    <string name="c21">My Routine</string>
    <string name="c22">Create A PDF</string>
    <string name="c23">Manage Labels: </string>
    <string name="c24">Update</string>
    <string name="c25">Academic</string>
    <string name="c26">No Schedule Found!</string>
    <string name="c27">Date:</string>
    <string name="c28">Start Time:</string>
    <string name="c29">End Time:</string>
    <string name="c30">Enter Title: </string>
    <string name="c31">Importance Level</string>
    <string name="c32">Update</string>
    <string name="c33">Cancel</string>
    <string name="c34">Monthly Routine</string>
    <string name="c35">Search</string>
    <string name="c36">Add Schedule</string>
    <string name="c37">No Date Selected!</string>
    <string name="c38">Update Routine</string>
    <string name="c39">Add</string>
    <string name="c40">Delete</string>
    <string name="c41">Sunday</string>
    <string name="c42">Monday</string>
    <string name="c43">Tuesday</string>
    <string name="c44">Wednesday</string>
    <string name="c45">Thursday</string>
    <string name="c46">Friday</string>
    <string name="c47">Saturday</string>
    <string name="c48">Weekly Routine</string>
    <string name="c49">Enter Title....</string>
    <string name="c50">Add Description....</string>
    <string name="c51">Start Time</string>
    <string name="c52">End Time</string>
    <string name="c53">Add</string>
    <string name="c54">Add Schedule</string>
    <string name="c55">Cancel</string>
    <string name="c56">Upcoming Schedule</string>
    <string name="c57">Today</string>
    <string name="c58">Tomorrow</string>
    <string name="c59">Next Three Days</string>
    <string name="c60">This Week</string>
    <string name="c61">Importance: </string>
    <string name="c62">No Routine Found!</string>
    <string name="c63">Save Notes</string>
    <string name="c64">Save Links</string>
    <string name="c65">Notes</string>
    <string name="c66">Enter Text:</string>
    <string name="c67">Links</string>
    <string name="c68">Enter Links:</string>
    <string name="c69">Update</string>
    <string name="c70">Delete</string>
    <string name="c71">Today\'s Schedule</string>
    <string name="c72">View</string>
    <string name="c73">Current Account Balance: </string>
    <string name="c74">Add A Note: </string>
    <string name="c75">Enter Here....</string>
    <string name="c76">Add</string>
    <string name="c77">Next</string>
    <string name="c78">Let\'s Get Started</string>
    <string name="c79">Before starting, please connect your google account to safeguard your progress.</string>
    <string name="c80">Skip this Step</string>
    <string name="c81">One more step</string>
    <string name="c82">Use Fingerprint</string>
    <string name="c83">Sign IN</string>
    <string name="c84">Enter Password.....</string>
    <string name="c85">Please setup your password to secure your data.</string>
    <string name="c86">Upload</string>
    <string name="c87">Edit Profile</string>
    <string name="c88">Update</string>
    <string name="c89">Cancel</string>
    <string name="c90">Update Password</string>
    <string name="c91">My Name</string>
    <string name="c92">My Email</string>
    <string name="c93">Save</string>
    <string name="c94">Enter Current Password</string>
    <string name="c95">Enter New Password</string>
    <string name="c96">Edit Image</string>
    <string name="c97">Document</string>
    <string name="c98">Backup Status:</string>
    <string name="c99">Backup Now</string>
    <string name="c100">Apply</string>
    <string name="c101">Notifications &amp; Settings: </string>
    <string name="c102">Login Authentication</string>
    <string name="c103">Daily Routine Reminder</string>
    <string name="c104">Transaction Reminder</string>
    <string name="c105">Diary Reminder</string>
    <string name="c106">Hi! Puzka Here>:</string>
    <string name="c107">No Tasks Today! It\'s chilling time....</string>
    <string name="c108">Permanent Notification</string>
</resources>