<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="350dp"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/e6"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="42dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView6"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:paddingStart="52dp"
            android:paddingEnd="2dp"
            android:text="@string/b35"
            android:textColor="#00158C"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/textView29"
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:paddingTop="4dp"
            android:paddingBottom="4dp"
            app:drawableTopCompat="@drawable/ic_multiply" />

    </LinearLayout>

    <TextView
        android:id="@+id/textView65"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="5dp"
        android:padding="3dp"
        android:text="@string/b36"
        android:textColor="#373737"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/ad2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:autofillHints="@string/app_name"
        android:background="@drawable/f1"
        android:ems="10"
        android:inputType="textPersonName"
        android:padding="5dp"
        android:text="@string/b39"
        android:textColor="#474747"
        android:textSize="16sp"
        tools:ignore="LabelFor" />

    <Button
        android:id="@+id/button18"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginStart="6dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="6dp"
        android:layout_marginBottom="2dp"
        android:background="@drawable/f2"
        android:text="@string/b37"
        android:textSize="16sp" />

    <Button
        android:id="@+id/button19"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginStart="6dp"
        android:layout_marginTop="6dp"
        android:layout_marginEnd="6dp"
        android:layout_marginBottom="5dp"
        android:background="@drawable/f4"
        android:text="@string/b38"
        android:textColor="#333333"
        android:textSize="16sp" />

</LinearLayout>