<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

                <TextView
                    android:id="@+id/textView98"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="5dp"
                    android:gravity="center"
                    android:padding="5dp"
                    android:text="@string/c48"
                    android:textColor="#252525"
                    android:textSize="24sp" />

                <com.google.android.material.chip.ChipGroup
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="5dp"
                    android:padding="4dp"
                    android:scrollbars="none"
                    app:singleSelection="true">

                        <com.google.android.material.chip.Chip
                            android:id="@+id/chip4"
                            style="@style/Widget.MaterialComponents.Chip.Choice"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/c41" />

                        <com.google.android.material.chip.Chip
                            android:id="@+id/chip5"
                            style="@style/Widget.MaterialComponents.Chip.Choice"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/c42" />

                        <com.google.android.material.chip.Chip
                            android:id="@+id/chip6"
                            style="@style/Widget.MaterialComponents.Chip.Choice"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/c43" />

                        <com.google.android.material.chip.Chip
                            android:id="@+id/chip7"
                            style="@style/Widget.MaterialComponents.Chip.Choice"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/c44" />

                        <com.google.android.material.chip.Chip
                            android:id="@+id/chip8"
                            style="@style/Widget.MaterialComponents.Chip.Choice"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/c45" />

                        <com.google.android.material.chip.Chip
                            android:id="@+id/chip9"
                            style="@style/Widget.MaterialComponents.Chip.Choice"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/c46" />

                        <com.google.android.material.chip.Chip
                            android:id="@+id/chip10"
                            style="@style/Widget.MaterialComponents.Chip.Choice"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/c47" />

                </com.google.android.material.chip.ChipGroup>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginEnd="5dp"
                    android:orientation="vertical"
                    android:padding="5dp"></LinearLayout>
        </LinearLayout>

</androidx.core.widget.NestedScrollView>