<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView9"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:fontFamily="@font/bitter"
                android:gravity="center"
                android:paddingStart="62dp"
                android:paddingEnd="2dp"
                android:text="@string/a47"
                android:textColor="#252525"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/textView10"
                android:layout_width="60dp"
                android:layout_height="match_parent"
                android:fontFamily="@font/brawler"
                android:gravity="center|start"
                android:padding="5dp"
                android:textColor="#252525"
                android:textSize="20sp"
                app:drawableTopCompat="@drawable/ic_multiply" />
        </LinearLayout>

        <RadioGroup
            android:id="@+id/rdgrp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="15dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="15dp">

            <RadioButton
                android:id="@+id/radioButton12"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/a49" />

            <RadioButton
                android:id="@+id/radioButton14"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/a53" />

            <RadioButton
                android:id="@+id/radioButton15"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/a51" />

            <RadioButton
                android:id="@+id/radioButton16"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/a52" />
        </RadioGroup>

        <TextView
            android:id="@+id/textView28"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_marginStart="25dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="25dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/e7"
            android:fontFamily="@font/coda"
            android:gravity="center"
            android:text="@string/a41"
            android:textColor="#001277"
            android:textSize="16sp"
            android:textStyle="normal" />
    </LinearLayout>
</ScrollView>