<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/g7"
    android:gravity="end"
    android:orientation="vertical"
    android:padding="5dp">

    <TextView
        android:id="@+id/textView117"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginTop="3dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="3dp"
        app:drawableTopCompat="@drawable/ic_baseline_edit" />

    <EditText
        android:id="@+id/editTextTime"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="6dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="6dp"
        android:autofillHints="@string/a1"
        android:background="@drawable/g5"
        android:drawableStart="@drawable/ic_baseline_title"
        android:drawablePadding="10dp"
        android:ems="10"
        android:fontFamily="@font/cherry_swash"
        android:hint="@string/c49"
        android:inputType="textMultiLine"
        android:padding="5dp"
        android:textColor="#353535"
        android:textColorHint="#575757"
        android:textSize="18sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView108"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="5dp"
            android:layout_marginTop="1dp"
            android:layout_weight="1"
            android:background="@drawable/g5"
            android:drawablePadding="10dp"
            android:fontFamily="@font/merienda_one"
            android:gravity="center|start"
            android:paddingStart="4dp"
            android:paddingEnd="2dp"
            android:text="@string/c51"
            android:textColor="#7C7C7C"
            android:textColorHint="#6E6E6E"
            android:textSize="16sp"
            app:drawableStartCompat="@drawable/ic_baseline_timer" />

        <TextView
            android:id="@+id/textView112"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="15dp"
            android:layout_marginTop="1dp"
            android:layout_marginEnd="5dp"
            android:layout_weight="1"
            android:background="@drawable/g5"
            android:drawablePadding="10dp"
            android:fontFamily="@font/merienda_one"
            android:gravity="center|start"
            android:paddingStart="7dp"
            android:paddingEnd="2dp"
            android:text="@string/c52"
            android:textColor="#7C7C7C"
            android:textColorHint="#6E6E6E"
            android:textSize="16sp"
            app:drawableStartCompat="@drawable/ic_baseline_timer_off" />
    </LinearLayout>

    <EditText
        android:id="@+id/editTextTime2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="5dp"
        android:autofillHints="@string/a1"
        android:background="@drawable/g5"
        android:drawableStart="@drawable/ic_baseline_comment"
        android:drawablePadding="10dp"
        android:ems="10"
        android:fontFamily="@font/arbutus_slab"
        android:hint="@string/c50"
        android:inputType="textMultiLine"
        android:padding="5dp"
        android:textColor="#353535"
        android:textColorHint="#6E6E6E"
        android:textSize="16sp" />

    <LinearLayout
        android:id="@+id/linear"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="5dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button30"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="2dp"
            android:layout_marginEnd="2dp"
            android:layout_weight="1"
            android:backgroundTint="#3F51B5"
            android:text="@string/c33"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/button29"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="2dp"
            android:layout_marginEnd="2dp"
            android:layout_weight="1"
            android:backgroundTint="#2196F3"
            android:text="@string/c24"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/button31"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="2dp"
            android:layout_marginEnd="2dp"
            android:layout_weight="1"
            android:backgroundTint="#F44336"
            android:text="@string/c40"
            tools:ignore="ButtonStyle" />
    </LinearLayout>

</LinearLayout>