<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="350dp"
    android:layout_height="wrap_content"
    android:background="@drawable/e6"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/e7"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView6"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:paddingStart="52dp"
            android:paddingEnd="2dp"
            android:text="@string/c9"
            android:textColor="#00158C"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/textView29"
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            app:drawableTopCompat="@drawable/ic_multiply" />

    </LinearLayout>

    <TextView
        android:id="@+id/textView83"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="5dp"
        android:padding="3dp"
        android:text="@string/c5"
        android:textColor="#004F8E"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/ad3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:autofillHints="@string/app_name"
        android:background="@drawable/f1"
        android:ems="10"
        android:inputType="textPersonName"
        android:padding="5dp"
        android:textSize="16sp"
        tools:ignore="LabelFor" />

    <TextView
        android:id="@+id/textView86"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="5dp"
        android:padding="3dp"
        android:text="@string/c6"
        android:textColor="#004F8E"
        android:textSize="18sp" />

    <com.jaredrummler.materialspinner.MaterialSpinner
        android:id="@+id/spinner3"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="6dp"
        android:textSize="14sp"
        app:ms_background_color="#DDDDDD" />

    <TextView
        android:id="@+id/textView87"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="5dp"
        android:padding="3dp"
        android:text="@string/c7"
        android:textColor="#004F8E"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/ad4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:autofillHints="@string/app_name"
        android:background="@drawable/f1"
        android:ems="10"
        android:inputType="number"
        android:padding="5dp"
        android:textSize="16sp"
        tools:ignore="LabelFor" />

    <Button
        android:id="@+id/button22"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="6dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="6dp"
        android:layout_marginBottom="5dp"
        android:background="@null"
        android:backgroundTint="#03A9F4"
        android:text="@string/c8" />

</LinearLayout>