<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    android:background="@drawable/e6"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView6"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:paddingStart="52dp"
            android:paddingEnd="2dp"
            android:text="@string/b7"
            android:textColor="#00158C"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/textView29"
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            app:drawableTopCompat="@drawable/ic_multiply" />

    </LinearLayout>

    <TextView
        android:id="@+id/textView31"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="3dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="3dp"
        android:padding="5dp"
        android:text="@string/b8"
        android:textColor="#006B9C"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/ad1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@drawable/f1"
        android:ems="10"
        android:inputType="textPersonName"
        android:padding="5dp"
        android:textSize="16sp"
        android:autofillHints="@string/app_name"
        tools:ignore="LabelFor" />

    <Button
        android:id="@+id/button10"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_marginStart="6dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="6dp"
        android:layout_marginBottom="5dp"
        android:background="@drawable/f2"
        android:text="@string/b6" />
</LinearLayout>