<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="350dp"
    android:layout_height="wrap_content"
    android:background="@drawable/e6"
    android:orientation="vertical"
    android:padding="6dp">

    <TextView
        android:id="@+id/textView40"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/coda"
        android:gravity="center"
        android:text="@string/b16"
        android:textColor="#393939"
        android:textSize="20sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="5dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button17"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="6dp"
            android:layout_weight="1"
            android:background="@drawable/f4"
            android:text="@string/b17" />

        <Button
            android:id="@+id/button15"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/f2"
            android:text="@string/b18" />
    </LinearLayout>
</LinearLayout>